--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [15, 16, 17]
+        node-version: [16, 17]
 
     steps:
       - name: Checkout repository
