--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "env": {
-    "node": true
+    "node": true,
+    "browser": true
   },
   "plugins": [
     "@typescript-eslint",
@@ -16,14 +17,72 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:typescript-sort-keys/recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
     "plugin:jest/recommended",
     "prettier"
   ],
   "rules": {
     "tsdoc/syntax": "warn",
-    "object-curly-spacing": ["warn", "always"],
-    "@typescript-eslint/no-inferrable-types": "off",
+    "@typescript-eslint/array-type": [
+      "warn",
+      {
+        "default": "generic"
+      }
+    ],
+    "@typescript-eslint/consistent-indexed-object-style": [
+      "error",
+      "index-signature"
+    ],
+    "@typescript-eslint/consistent-type-assertions": [
+      "error",
+      {
+        "assertionStyle": "as",
+        "objectLiteralTypeAssertions": "never"
+      }
+    ],
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+    "@typescript-eslint/consistent-type-imports": [
+      "warn",
+      { "prefer": "type-imports" }
+    ],
+    "@typescript-eslint/member-ordering": ["warn"],
+    "@typescript-eslint/method-signature-style": ["warn"],
+    "@typescript-eslint/sort-type-union-intersection-members": ["warn"],
+    "import/no-cycle": "error",
+    "no-constant-condition": ["error", { "checkLoops": false }],
     "unused-imports/no-unused-imports": "warn",
     "unused-imports/no-unused-vars": "warn"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["./jest.config.js"],
+      "rules": {
+        "tsdoc/syntax": "off"
+      }
+    },
+    {
+      "files": ["*.ts", "*.tsx"],
+      "parserOptions": {
+        "project": ["./tsconfig.json"]
+      },
+      "rules": {
+        "@typescript-eslint/explicit-function-return-type": ["warn"],
+        "@typescript-eslint/no-unnecessary-boolean-literal-compare": ["warn"],
+        "@typescript-eslint/strict-boolean-expressions": [
+          "error",
+          {
+            "allowString": false,
+            "allowNumber": false,
+            "allowNullableObject": false,
+            "allowNullableBoolean": false,
+            "allowNullableString": false,
+            "allowNullableNumber": false,
+            "allowAny": false
+          }
+        ],
+        "@typescript-eslint/switch-exhaustiveness-check": ["error"]
+      }
+    }
+  ]
 }
