--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "files": [
     "./dist/"
   ],
-  "exports": {
-    ".": "./dist/index.js"
-  },
+  "main": "dist/src/index.js",
+  "typings": "dist/src/index.d.ts",
   "author": {
     "email": "petr@flaks.dev",
     "name": "Petr Flaks"
