--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -68,6 +68,7 @@
       },
       "rules": {
         "@typescript-eslint/explicit-function-return-type": ["warn"],
+        "@typescript-eslint/no-base-to-string": ["error"],
         "@typescript-eslint/no-unnecessary-boolean-literal-compare": ["warn"],
         "@typescript-eslint/strict-boolean-expressions": [
           "error",
